@@ -3,6 +3,7 @@ crystal-facet-uml (1.65.6) UNRELEASED; urgency=medium
   [ Andreas Warnke ]
   * Searching for a non-scenario-based relationship finds expected diagrams
   * Searching for a scenario relationship finds less superfluous occurrences
+  * in html export, "appears in" links to current chapter are omitted
 
  -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 21 Sep 2025 16:30:00 +0200
 
